added an svg file as a header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ned Corney's Personal Portfolio</title>
+<img src="LogoHeader.svg" alt="NedInYourHead Header Logo" style="width:128px;height:128px;">
+<title>NedInYourHead's Personal Portfolio</title>
 </head>
 <body>
 <h1>Hello World</h1>
